<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iv_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidpassport"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="158dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="328dp"
        android:background="#CDDC39"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="124dp"
        android:layout_height="169dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tv1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nuestro"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_nuestro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bt_jugar"
        android:layout_width="119dp"
        android:layout_height="88dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/bt_jugar"
        android:onClick="jugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:srcCompat="@drawable/botoninicio" />
</androidx.constraintlayout.widget.ConstraintLayout>

